--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,20 @@
         android:theme="@style/Theme.MonitoringStudentProgressApp"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.MainActivity"
-            android:exported="true">
+            android:name=".Activity.SingUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.SingInActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Activity.MainActivity"
+            android:exported="false">
         </activity>
     </application>
 
